--- a/正.html
+++ b/正.html
@@ -17,7 +17,14 @@
         /* ------------------- 排版元素 ------------------*/
 
         body {
-            background-color: #000000;
+            background-image: url(/img/book&camera.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: top 0;
+            background-attachment: fixed;
+            backdrop-filter: blur(3px);
+
+            /* background-color: #000000; */
             /* background-color: rgb(255, 250, 251); */
             /* background-color: #F5F5F5; */
         }
@@ -34,6 +41,10 @@
             width: 100vw;
             height: auto;
         }
+
+        /* #s1box {
+            position: sticky;
+        } */
 
         #s1photo {
             max-width: 100vw;
@@ -128,6 +139,7 @@
             bottom: 20px;
             right: 85px;
         }
+
         /* -----------2. 照片一覽(S3)+(S5)--------------------------- */
 
         #manbox {
@@ -156,7 +168,7 @@
 
         /* ------------4. 介紹網頁 (S6+img+介紹)----------------------- */
         #fs6 {
-            background-color: #000000;
+            /* background-color: #000000; */
             /* 黑色背景 */
             display: flex;
             justify-content: center;
@@ -166,9 +178,9 @@
 
         #s6 {
             position: relative;
-            width: 120vmin;
+            width: 180vmin;
             /* 圓形的寬度，根據視口大小調整 */
-            height: 150vmin;
+            height: 160vmin;
             /* 圓形的高度 */
             background-color: rgb(255, 250, 251);
             /* 白色圓形背景 */
@@ -241,7 +253,7 @@
     <!-------------- header (S1+封面+logo)---------------------->
     <header>
         <section id="s1">
-            <div><img id="s1photo" src="./img/girl5.jpg"></div>
+            <div id="s1phobox"><img id="s1photo" src="./img/girl5.jpg"></div>
             <div id="logobox">
                 <a href="#">
                     <img src="./img/Vesluneir.png">
@@ -340,6 +352,8 @@
 
         <div id="box"></div>
         <div id="box"></div>
+        <div id="box"></div>
+        <div id="box"></div>
 
 
         <!------------- 3. 介紹網頁(S6+img+介紹) --------------------->
@@ -365,10 +379,12 @@
 
         <div id="box"></div>
         <div id="box"></div>
+        <div id="box"></div>
+        <div id="box"></div>
 
 
         <!---------- 4. 照片一覽(S5) -------------------------->
-        <section>
+        <!-- <section>
             <div id="manbox" class="row">
                 <div id="man" class="col-2">
                     <figure class="figure">
@@ -407,16 +423,17 @@
                     </figure>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
+        <div id="box"></div>
         <div id="box"></div>
         <div id="box"></div>
         <div id="box"></div>
 
 
         <!---------- 5. 照片輪播(S4) -------------------------->
-        <section id="s4">
+        <!-- <section id="s4">
             <div id="s4photo" class="carousel slide carousel-fade" data-bs-interval="1500" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -438,12 +455,14 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-        </section>
+        </section> -->
 
 
 
     </main>
 
+    <div id="box"></div>
+    <div id="box"></div>
     <div id="box"></div>
     <div id="box"></div>
 
