--- a/正.html
+++ b/正.html
@@ -11,7 +11,9 @@
     ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@1,583&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alegreya+SC:wght@500&family=Alegreya:ital,wght@0,483;1,483&display=swap"
+        rel="stylesheet">
 
     <style>
         /* ------------------- 排版元素 ------------------*/
@@ -42,10 +44,6 @@
             height: auto;
         }
 
-        /* #s1box {
-            position: sticky;
-        } */
-
         #s1photo {
             max-width: 100vw;
         }
@@ -64,7 +62,7 @@
         #nav {
             position: absolute;
             right: 50px;
-            top: 40px;
+            top: 30px;
         }
 
         nav ul {
@@ -74,6 +72,14 @@
             /* 水平方向排列 */
             gap: 40px;
             /* 設定項目之間的間距 */
+        }
+
+        nav li {
+            font-family: "Alegreya", serif;
+            font-optical-sizing: auto;
+            font-weight: 483;
+            font-style: normal;
+            font-size: 25px;
         }
 
         /* ---------- 1. 文字介紹(S2)-------------------- */
@@ -262,9 +268,9 @@
             <nav id="nav">
                 <ul id="navbox">
                     <li onclick=""><a href="#"><img src="./img/放大鏡.png"></a></li>
-                    <li><a href="#"><img style="width: 100%;" src="./img/Photographer.png"></a></li>
-                    <li><a href="#"><img style="width: 100%;" src="./img/Look Book.png"></a></li>
-                    <li><a href="#"><img style="width: 100%;" src="./img/Lesson.png"></a></li>
+                    <li><a href="#"><img src="/img/Photographer.png" alt=""></a></li>
+                    <li><a href="#"><img src="/img/Look Book.png" alt=""></a></li>
+                    <li><a href="#"><img src="/img/Lesson.png" alt=""></a></li>
                 </ul>
             </nav>
         </section>
