新增攝影師頁面及相冊區

--- a/正.html
+++ b/正.html
@@ -274,16 +274,16 @@
         <section id="s1">
             <div id="s1phobox"><img id="s1photo" src="./img/girl5.jpg"></div>
             <div id="logobox">
-                <a href="#">
+                <a href="正.html">
                     <img src="./img/Vesluneir.png">
                 </a>
             </div>
             <nav id="nav">
                 <ul id="navbox">
                     <li onclick=""><a href="#"><img src="./img/放大鏡.png"></a></li>
-                    <li><a href="#"><img src="/img/Photographer.png" alt=""></a></li>
-                    <li><a href="#"><img src="/img/Look Book.png" alt=""></a></li>
-                    <li><a href="#"><img src="/img/Lesson.png" alt=""></a></li>
+                    <li><a href="Photographer.html">PHOTOGRAPHER</a></li>
+                    <li><a href="#">LOOK BOOK</a></li>
+                    <li><a href="#">LESSON</a></li>
                 </ul>
             </nav>
         </section>
@@ -388,9 +388,8 @@
                 <!-- 第二組內容 -->
                 <div class="s6box">
                     <article>
-                        模特兒專區是您展示自我、尋找最佳攝影師合作的理想場所。<br>
-                        您可以上傳並展示您的最新作品，讓攝影師了解您的拍攝風格與能力。<br>
-                        不僅如此，您還可以依照自己的需求篩選合適的攝影師，從各種攝影師的作品集和服務介紹中選擇最佳合作夥伴。
+                        每一份作品集都是攝影師的名片。在這裡，您可以展示您的拍攝風格、專業領域與代表作，讓模特兒和客戶快速了解您的實力。
+                        無論是時尚大片、婚禮紀實，還是創意作品，這裡都是您展示才華的最佳平台，吸引更多合作機會！
                     </article>
                     <img src="img/book&camera2.jpg" alt="image2">
                 </div>
@@ -398,8 +397,9 @@
                 <div class="s6box">
                     <img src="img/camerabook.jpg" alt="image3">
                     <article>
-                        無論您是模特兒還是攝影師，拍攝技巧都是提升作品質量的關鍵。<br>
-                        在我們的拍攝技巧區，您可以找到專業的教程和建議，幫助您在拍攝過程中表現更出色。
+                        拍攝是一門藝術，我們的課程專區有許多為攝影師與模特兒打造的學習資源。<br>
+                        從基礎攝影設定到進階燈光運用，從構圖技巧到創意拍攝秘訣，
+                        無論是新手還是專業人士，都能在這裡找到提升技術的靈感，讓每一張照片都成為藝術品！<br>
                     </article>
                 </div>
             </section>
