--- a/正.html
+++ b/正.html
@@ -20,6 +20,27 @@
 
 
     <style>
+        #welcome-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            /* 黑色背景透明度 */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            transition: opacity 1s;
+        }
+
+        #main-content {
+            display: none;
+            text-align: center;
+            padding: 20px;
+        }
+
         /* ------------------- 排版元素 ------------------*/
 
         body {
@@ -269,157 +290,160 @@
 </head>
 
 <body>
-    <!-------------- header (S1+封面+logo)---------------------->
-    <header>
-        <section id="s1">
-            <div id="s1phobox"><img id="s1photo" src="./img/girl5.jpg"></div>
-            <div id="logobox">
-                <a href="正.html">
-                    <img src="./img/Vesluneir.png">
-                </a>
-            </div>
-            <nav id="nav">
-                <ul id="navbox">
-<<<<<<< Updated upstream
-                    <li onclick=""><a href="#"><img src="./img/放大鏡.png"></a></li>
-                    <li><a href="Photographer.html">PHOTOGRAPHER</a></li>
-                    <li><a href="#">LOOK BOOK</a></li>
-                    <li><a href="#">LESSON</a></li>
-=======
-                    <li><a href="#"><img src="./img/放大鏡.png"></a></li>
-                    <li><a href="#"><img style="width: 100%;" src="./img/Photographer.png"></a></li>
-                    <li><a href="#"><img style="width: 100%;" src="./img/Look Book.png"></a></li>
-                    <li><a href="#"><img style="width: 100%;" src="./img/Lesson.png"></a></li>
->>>>>>> Stashed changes
-                </ul>
-            </nav>
-        </section>
+    <section id="welcome-screen">
+        <div>
+            <iframe src="https://giphy.com/embed/Rk3MD1PtvVatwMQeBN" width="480" height="269"></iframe>
+        </div>
+        <div id="welcome-img"><img src="/img/girl.jpg" style="width: 500px;"></div>
+        <div id="welcome-img"><img src="/img/金髮美女.jpg" style="width: 600px;"></div>
+        <div id="welcome-img"><img src="/img/女人及車子.jpg" style="width: 700px;"></div>
+    </section>
 
-    </header>
+    <section id="main-content">
+        <!-------------- header (S1+封面+logo)---------------------->
+        <header>
+            <section id="s1">
+                <div id="s1phobox"><img id="s1photo" src="./img/girl5.jpg"></div>
+                <div id="logobox">
+                    <a href="正.html">
+                        <img src="./img/Vesluneir.png">
+                    </a>
+                </div>
+                <nav id="nav">
+                    <ul id="navbox">
+                        <li onclick=""><a href="#"><img src="./img/放大鏡.png"></a></li>
+                        <li><a href="Photographer.html">PHOTOGRAPHER</a></li>
+                        <li><a href="LookBook.html">LOOK BOOK</a></li>
+                        <li><a href="Article.html">Article</a></li>
+                    </ul>
+                </nav>
+            </section>
 
-    <div id="box"></div>
-    <div id="box"></div>
-    <div id="box"></div>
-    <div id="box"></div>
+        </header>
 
-    <main>
+        <div id="box"></div>
+        <div id="box"></div>
+        <div id="box"></div>
+        <div id="box"></div>
 
-        <!------------ 1. 文字介紹(S2) ----------------->
-        <section id="s2">
-            <div>
-                <img src="./img/Star 8.png">
-            </div>
-            <div>
-                <img src="./img/Star 10.png">
-            </div>
-            <div>
-                <img src="./img/Star 5.png">
-            </div>
-            <div id="strbox">
-                <img id="str51" src="./img/Star 5.png">
-            </div>
-            <div id="hbox">
-                <h1 id="h11">
-                    “ Every Moment
-                </h1>
-                <h1 id="h12">
-                    Carries an Endless Story. ”
-                </h1>
-            </div>
-            <div>
-                <img src="./img/Star 5.png">
-            </div>
-            <div id="strbox">
-                <img id="str51" src="./img/Star 5.png">
-            </div>
-            <div id="strbox">
-                <img id="str9" src="./img/Star 9.png">
-            </div>
-            <div id="strbox">
-                <img id="str11" src="/img/Star 11.png">
-            </div>
-        </section>
+        <main>
 
-        <!-- 視覺的記憶，在每一個瞬間中蔓延。
+            <!------------ 1. 文字介紹(S2) ----------------->
+            <section id="s2">
+                <div>
+                    <img src="./img/Star 8.png">
+                </div>
+                <div>
+                    <img src="./img/Star 10.png">
+                </div>
+                <div>
+                    <img src="./img/Star 5.png">
+                </div>
+                <div id="strbox">
+                    <img id="str51" src="./img/Star 5.png">
+                </div>
+                <div id="hbox">
+                    <h1 id="h11">
+                        “ Every Moment
+                    </h1>
+                    <h1 id="h12">
+                        Carries an Endless Story. ”
+                    </h1>
+                </div>
+                <div>
+                    <img src="./img/Star 5.png">
+                </div>
+                <div id="strbox">
+                    <img id="str51" src="./img/Star 5.png">
+                </div>
+                <div id="strbox">
+                    <img id="str9" src="./img/Star 9.png">
+                </div>
+                <div id="strbox">
+                    <img id="str11" src="/img/Star 11.png">
+                </div>
+            </section>
+
+            <!-- 視覺的記憶，在每一個瞬間中蔓延。
 
         「每一幅畫面，都是沉默中流動的時光遺跡。」 -->
 
-        <div id="box"></div>
-        <div id="box"></div>
-        <div id="box"></div>
-        <div id="box"></div>
+            <div id="box"></div>
+            <div id="box"></div>
+            <div id="box"></div>
+            <div id="box"></div>
 
 
-        <!------------- 2. 照片一覽(S3) --------------------------->
-        <section>
-            <div id="manbox" class="row">
-                <div id="man" class="col-4">
-                    <figure class="figure">
-                        <img src="./img/photer2.jpg" class="img-fluid figure-img">
-                        <figcaption class="figure-caption">河</figcaption>
-                    </figure>
-                </div>
-                <div id="man" class="col-4">
-                    <figure class="figure">
-                        <img src="./img/金髮美女.jpg" class="img-fluid figure-img">
-                        <figcaption class="figure-caption">街</figcaption>
-                    </figure>
-                </div>
-                <div id="man" class="col-4">
-                    <figure class="figure ">
-                        <img src="./img/photer2.jpg" class="img-fluid figure-img">
-                        <figcaption class="figure-caption">塔</figcaption>
-                    </figure>
-                </div>
-            </div>
-        </section>
-
-
-        <div id="box"></div>
-        <div id="box"></div>
-        <div id="box"></div>
-        <div id="box"></div>
-
-
-        <!------------- 3. 介紹網頁(S6+img+介紹) --------------------->
-        <section id="fs6">
-            <section id="s6">
-                <!-- 第一組內容 -->
-                <div class="s6box">
-                    <img src="./img/金髮美女.jpg" alt="image1">
-                    <article>
-                        攝影師專區可以輕鬆展示您的作品集，分享您的拍攝風格和專業技能。<br>
-                        無論是時尚攝影、婚禮攝影、肖像攝影還是藝術創作，這裡是您展示才華的完美平台。
-                    </article>
-                </div>
-                <!-- 第二組內容 -->
-                <div class="s6box">
-                    <article>
-                        每一份作品集都是攝影師的名片。在這裡，您可以展示您的拍攝風格、專業領域與代表作，讓模特兒和客戶快速了解您的實力。
-                        無論是時尚大片、婚禮紀實，還是創意作品，這裡都是您展示才華的最佳平台，吸引更多合作機會！
-                    </article>
-                    <img src="img/book&camera2.jpg" alt="image2">
-                </div>
-                <!-- 第三組內容 -->
-                <div class="s6box">
-                    <img src="img/camerabook.jpg" alt="image3">
-                    <article>
-                        拍攝是一門藝術，我們的課程專區有許多為攝影師與模特兒打造的學習資源。<br>
-                        從基礎攝影設定到進階燈光運用，從構圖技巧到創意拍攝秘訣，
-                        無論是新手還是專業人士，都能在這裡找到提升技術的靈感，讓每一張照片都成為藝術品！<br>
-                    </article>
+            <!------------- 2. 照片一覽(S3) --------------------------->
+            <section>
+                <div id="manbox" class="row">
+                    <div id="man" class="col-4">
+                        <figure class="figure">
+                            <img src="./img/photer2.jpg" class="img-fluid figure-img">
+                            <figcaption class="figure-caption">河</figcaption>
+                        </figure>
+                    </div>
+                    <div id="man" class="col-4">
+                        <figure class="figure">
+                            <img src="./img/金髮美女.jpg" class="img-fluid figure-img">
+                            <figcaption class="figure-caption">街</figcaption>
+                        </figure>
+                    </div>
+                    <div id="man" class="col-4">
+                        <figure class="figure ">
+                            <img src="./img/photer2.jpg" class="img-fluid figure-img">
+                            <figcaption class="figure-caption">塔</figcaption>
+                        </figure>
+                    </div>
                 </div>
             </section>
-        </section>
-
-        <div id="box"></div>
-        <div id="box"></div>
-        <div id="box"></div>
-        <div id="box"></div>
 
 
-        <!---------- 4. 照片一覽(S5) -------------------------->
-        <!-- <section>
+            <div id="box"></div>
+            <div id="box"></div>
+            <div id="box"></div>
+            <div id="box"></div>
+
+
+            <!------------- 3. 介紹網頁(S6+img+介紹) --------------------->
+            <section id="fs6">
+                <section id="s6">
+                    <!-- 第一組內容 -->
+                    <div class="s6box">
+                        <img src="./img/金髮美女.jpg" alt="image1">
+                        <article>
+                            攝影師專區可以輕鬆展示您的作品集，分享您的拍攝風格和專業技能。<br>
+                            無論是時尚攝影、婚禮攝影、肖像攝影還是藝術創作，這裡是您展示才華的完美平台。
+                        </article>
+                    </div>
+                    <!-- 第二組內容 -->
+                    <div class="s6box">
+                        <article>
+                            每一份作品集都是攝影師的名片。在這裡，您可以展示您的拍攝風格、專業領域與代表作，讓模特兒和客戶快速了解您的實力。
+                            無論是時尚大片、婚禮紀實，還是創意作品，這裡都是您展示才華的最佳平台，吸引更多合作機會！
+                        </article>
+                        <img src="img/book&camera2.jpg" alt="image2">
+                    </div>
+                    <!-- 第三組內容 -->
+                    <div class="s6box">
+                        <img src="img/camerabook.jpg" alt="image3">
+                        <article>
+                            拍攝是一門藝術，我們的課程專區有許多為攝影師與模特兒打造的學習資源。<br>
+                            從基礎攝影設定到進階燈光運用，從構圖技巧到創意拍攝秘訣，
+                            無論是新手還是專業人士，都能在這裡找到提升技術的靈感，讓每一張照片都成為藝術品！<br>
+                        </article>
+                    </div>
+                </section>
+            </section>
+
+            <div id="box"></div>
+            <div id="box"></div>
+            <div id="box"></div>
+            <div id="box"></div>
+
+
+            <!---------- 4. 照片一覽(S5) -------------------------->
+            <!-- <section>
             <div id="manbox" class="row">
                 <div id="man" class="col-2">
                     <figure class="figure">
@@ -461,13 +485,13 @@
         </section> -->
 
 
-        <div id="box"></div>
-        <div id="box"></div>
+            <div id="box"></div>
+            <div id="box"></div>
 
 
 
-        <!---------- 5. 照片輪播(S4) -------------------------->
-        <!-- <section id="s4">
+            <!---------- 5. 照片輪播(S4) -------------------------->
+            <!-- <section id="s4">
             <div id="s4photo" class="carousel slide carousel-fade" data-bs-interval="1500" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -493,27 +517,58 @@
 
 
 
-    </main>
+        </main>
 
-    <div id="box"></div>
-    <div id="box"></div>
+        <div id="box"></div>
+        <div id="box"></div>
 
 
 
-    <!-------------- 6. footer 頁尾聯絡方式(S7)----------------->
-    <footer>
-        <section>
-            <div id="foot">
-                <!-- <a href="#"><img src="./img/logo.png"></a>
+        <!-------------- 6. footer 頁尾聯絡方式(S7)----------------->
+        <footer>
+            <section>
+                <div id="foot">
+                    <!-- <a href="#"><img src="./img/logo.png"></a>
                 <a href="#"><img src="./img/logo.png"></a> -->
-            </div>
-        </section>
+                </div>
+            </section>
 
-    </footer>
+        </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
 
+    </section>
+
+    <script>
+        window.onload = function () {
+
+            const welcomeScreen = document.getElementById("welcome-screen");
+            const mainContent = document.getElementById("main-content");
+            const welcomeImg = new Array("welcome-img");
+            welcomeImg[0] = "img\girl.jpg"
+            welcomeImg[1] = "img\金髮美女.jpg"
+            welcomeImg[2] = "img\女人及車子.jpg"
+
+
+            setTimeout(() => {
+                welcomeScreen.style.opacity = "0";
+                setTimeout(() => {
+                    welcomeScreen.style.display = "none";
+                }, 1000);
+            }, 1000);
+            setTimeout(() => {
+                welcomeImg.style.display = "block";
+                setTimeout(() => {
+                    welcomeImg.style.display = "none";
+                }, 1000);
+            }, 1000);
+            setTimeout(() => { 
+                mainContent.style.display = "block";                
+             }, 1000);
+        };
+    </script>
+    
 </body>
 
 </html>
