--- a/測試.html
+++ b/測試.html
@@ -11,6 +11,28 @@
             margin: 0;
         }
 
+        /* 動態畫面樣式 */
+        #welcome-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('https://via.placeholder.com/1920x1080') no-repeat center center/cover;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            font-size: 2rem;
+            z-index: 9999;
+            transition: opacity 1s;
+        }
+
+        /* 動畫後主頁內容 */
+        #main-content {
+            display: none;
+        }
+
         .sidebar {
             width: 250px;
             background-color: #333;
@@ -72,12 +94,43 @@
         </ul>
     </div>
 
+    <div id="welcome-screen">
+        <h1>歡迎光臨我們的網站！</h1>
+    </div>
+
+    <!-- 主頁內容 -->
+    <div id="main-content">
+        <h1>主頁內容</h1>
+        <p>這是網頁的主要內容。</p>
+    </div>
+
     <div class="main-content">
         <h1>Main Content</h1>
         <p>This is the main content area. The sidebar is positioned on the left.</p>
     </div>
 
     <div class="toggle-btn" onclick="document.querySelector('.sidebar').classList.toggle('collapsed')">☰</div>
+
+    <script>
+        // 使用 window.onload 等待所有資源完全載入後執行
+        window.onload = function () {
+            console.log("所有資源載入完成！");
+
+            // 歡迎動畫
+            const welcomeScreen = document.getElementById("welcome-screen");
+            const mainContent = document.getElementById("main-content");
+
+            // 等待 2 秒後淡出動畫，顯示主頁內容
+            setTimeout(() => {
+                welcomeScreen.style.opacity = "0";
+                setTimeout(() => {
+                    welcomeScreen.style.display = "none";
+                    mainContent.style.display = "block"; // 顯示主頁內容
+                }, 1000); // 等待淡出動畫結束
+            }, 2000);
+        };
+    </script>
+
 </body>
 
 </html>
