--- a/html檔/Photographer.html
+++ b/html檔/Photographer.html
@@ -183,15 +183,15 @@
     <!--------------------- header ----------------------->
     <header>
         <section id="s1">
-            <div id="s1phobox"><img id="s1photo" src="./img/girl5.jpg"></div>
+            <div id="s1phobox"><img id="s1photo" src="/img/girl5.jpg"></div>
             <div id="logobox">
                 <a href="正.html">
-                    <img src="./img/Vesluneir.png">
+                    <img src="/img/Vesluneir.png">
                 </a>
             </div>
             <nav id="nav">
                 <ul id="navbox">
-                    <li onclick=""><a href="#"><img src="./img/放大鏡.png"></a></li>
+                    <li onclick=""><a href="#"><img src="/img/放大鏡.png"></a></li>
                     <li><a href="">PHOTOGRAPHER</a></li>
                     <li><a href="#">LOOK BOOK</a></li>
                     <li><a href="#">LESSON</a></li>
@@ -228,7 +228,7 @@
                 </div>
 
                 <div class="photographer-card">
-                    <img src="./img/人1左.JPG" alt="攝影師2" class="photographer-image">
+                    <img src="/img/人1左.JPG" alt="攝影師2" class="photographer-image">
                     <div class="photographer-info">
                         <h3 class="photographer-name">攝影師2</h3>
                         <p class="photographer-specialty">時尚攝影</p>
@@ -240,7 +240,7 @@
                 </div>
 
                 <div class="photographer-card">
-                    <img src="./img/人1右.JPG" alt="攝影師2" class="photographer-image">
+                    <img src="/img/人1右.JPG" alt="攝影師2" class="photographer-image">
                     <div class="photographer-info">
                         <h3 class="photographer-name">攝影師2</h3>
                         <p class="photographer-specialty">時尚攝影</p>
@@ -252,7 +252,7 @@
                 </div>
 
                 <div class="photographer-card">
-                    <img src="./img/海灘兩人.jpg" alt="攝影師2" class="photographer-image">
+                    <img src="/img/海灘兩人.jpg" alt="攝影師2" class="photographer-image">
                     <div class="photographer-info">
                         <h3 class="photographer-name">攝影師2</h3>
                         <p class="photographer-specialty">時尚攝影</p>
@@ -264,7 +264,7 @@
                 </div>
 
                 <div class="photographer-card">
-                    <img src="./img/海灘兩人.jpg" alt="攝影師2" class="photographer-image">
+                    <img src="/img/海灘兩人.jpg" alt="攝影師2" class="photographer-image">
                     <div class="photographer-info">
                         <h3 class="photographer-name">攝影師2</h3>
                         <p class="photographer-specialty">時尚攝影</p>
