--- a/html檔/Photographer.html
+++ b/html檔/Photographer.html
@@ -7,9 +7,6 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css
     ">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js
-    ">
-
     <style>
         /* ------------------- 排版元素 ------------------*/
 
@@ -24,28 +21,26 @@
             height: 75px;
         }
 
-        /* ---------header (S1+封面+logo+nav)-------------------- */
+        /* ---------header (輪播+封面+logo+nav)-------------------- */
 
-        #s1 {
+        #s4 {
             display: flex;
             width: 100vw;
             height: auto;
+            justify-content: center;
+            /* 水平置中 */
+            align-items: center;
+            /* 垂直置中 */
         }
 
-        #s1photo {
-            max-width: 100vw;
+        #s4photo img {
+            max-width: 100%;
+            height: auto;
+            /* 保持圖片比例 */
+            margin: 0 auto;
+            /* 確保水平置中 */
         }
 
-        #logobox {
-            max-width: 80%;
-            position: absolute;
-            left: 20px;
-            top: 20px;
-        }
-
-        #logobox img {
-            max-width: 80%;
-        }
 
         #nav {
             position: absolute;
@@ -182,12 +177,27 @@
 <body>
     <!--------------------- header ----------------------->
     <header>
-        <section id="s1">
-            <div id="s1phobox"><img id="s1photo" src="/img/girl5.jpg"></div>
-            <div id="logobox">
-                <a href="正.html">
-                    <img src="/img/Vesluneir.png">
-                </a>
+        <section id="s4">
+            <div id="s4photo" class="carousel slide carousel-fade" data-bs-interval="1500" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="/img/櫻花富士山.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/img/苔癬.jpg" class="d-block w-100">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/img/飲料機.jpg" class="d-block w-100">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#s4photo" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#s4photo" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
             <nav id="nav">
                 <ul id="navbox">
@@ -277,6 +287,9 @@
             </section>
         </main>
     </section>
+
+    <!-- 引入 Bootstrap JS (放在 body 結束前) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
