更改攝影師頁面

--- a/html檔/正.html
+++ b/html檔/正.html
@@ -216,7 +216,7 @@
             position: relative;
             width: 180vmin;
             /* 圓形的寬度，根據視口大小調整 */
-            height: 160vmin;
+            height: 180vmin;
             /* 圓形的高度 */
             background-color: rgb(255, 250, 251);
             /* 白色圓形背景 */
@@ -308,7 +308,7 @@
                         <li onclick=""><a href="#"><img src="/img/放大鏡.png"></a></li>
                         <li><a href="Photographer.html">PHOTOGRAPHER</a></li>
                         <li><a href="LookBook.html">LOOK BOOK</a></li>
-                        <li><a href="Article.html">Article</a></li>
+                        <li><a href="Article.html">ARTICLE</a></li>
                     </ul>
                 </nav>
             </section>
