--- a/html檔/Photographer.html
+++ b/html檔/Photographer.html
@@ -11,8 +11,8 @@
         /* ------------------- 排版元素 ------------------*/
 
         body {
-            background-color: #000000;
-            /* background-color: rgb(255, 250, 251); */
+            /* background-color: #000000; */
+            background-color: rgb(255, 250, 251);
             /* background-color: #F5F5F5;  */
         }
 
@@ -30,31 +30,40 @@
             justify-content: center;
             /* 水平置中 */
             align-items: center;
+            text-align: center;
             /* 垂直置中 */
         }
 
         #s4photo img {
-            max-width: 100%;
+            max-width: 80%;
             height: auto;
             /* 保持圖片比例 */
             margin: 0 auto;
             /* 確保水平置中 */
         }
 
-
-        #nav {
-            position: absolute;
-            right: 50px;
-            top: 30px;
+        nav {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: auto;
+            position: relative;
         }
 
         nav ul {
+            width: 90vw;
+            background-color: rgba(90, 188, 222, 0.5);
+            background-size: auto;
             list-style: none;
-            display: grid;
-            grid-auto-flow: column;
-            /* 水平方向排列 */
-            gap: 40px;
-            /* 設定項目之間的間距 */
+            display: flex;
+            /* 使用 Flexbox */
+            justify-content: center;
+            /* 水平置中 */
+            text-align: center;
+            /* 居中文本 */
+            gap: 90px;
+            /* 項目間距 */
+            margin: 10px;
         }
 
         nav li {
@@ -65,22 +74,51 @@
             font-size: 25px;
         }
 
+        nav li a {
+            text-decoration: none;
+            color: aliceblue;
+        }
+
+        #logobox {
+            max-width: 60%;
+            position: absolute;
+            top: 30px;
+            left: 30px;
+            z-index: 3;
+        }
+
+        #logobox img {
+            max-width: 60%;
+        }
+
         /* ---------------------側邊欄--------------------- */
         #sidebox {
             display: grid;
             grid-template-columns: 250px 1fr;
             /* 定義兩列，左邊側邊欄固定寬度，右邊為自動分配的主內容區域 */
             height: 100vh;
-            margin: 0;
+            margin: 25px 100px 25px 100px;
         }
 
         .sidebar {
-            background-color: #333;
+            background-color: rgba(54, 143, 199, 0.5);
             color: white;
             display: flex;
             flex-direction: column;
             /* 垂直排列 */
-            padding-top: 20px;
+            padding-top: 15px;
+            padding-left: 15px;
+        }
+
+        .sidebar h2 {
+            font-size: 24px;
+            /* margin-bottom: 5px; */
+        }
+
+        .sidebar input[type="text"] {
+            width: 80%;
+            border: none;
+            border-radius: 5px;
         }
 
         /* 側邊欄中的選單項目 */
@@ -110,6 +148,7 @@
             /* 使卡片垂直居中 */
             text-align: center;
             /* 保證文字也是居中 */
+            margin: 0 80px 25px 80px;
         }
 
         .photographer-card {
@@ -177,17 +216,23 @@
 <body>
     <!--------------------- header ----------------------->
     <header>
+        <div id="logobox">
+            <a href="正.html">
+                <img src="/img/Vesluneir.png">
+            </a>
+        </div>
+
         <section id="s4">
             <div id="s4photo" class="carousel slide carousel-fade" data-bs-interval="1500" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/img/櫻花富士山.jpg" class="d-block w-100">
+                        <img src="/img/sarura_mt.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="/img/苔癬.jpg" class="d-block w-100">
+                        <img src="/img/rocksea.jpg" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="/img/飲料機.jpg" class="d-block w-100">
+                        <img src="/img/seawoman.jpg" class="d-block w-100">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#s4photo" data-bs-slide="prev">
@@ -199,27 +244,54 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-            <nav id="nav">
-                <ul id="navbox">
-                    <li onclick=""><a href="#"><img src="/img/放大鏡.png"></a></li>
-                    <li><a href="">PHOTOGRAPHER</a></li>
-                    <li><a href="#">LOOK BOOK</a></li>
-                    <li><a href="#">LESSON</a></li>
-                </ul>
-            </nav>
         </section>
+
+        <nav id="nav">
+            <ul id="navbox">
+                <li><a href="正.html">HOME</a></li>
+                <li><a href="Photographer.html">PHOTOGRAPHER</a></li>
+                <li><a href="LookBook.html">LOOK BOOK</a></li>
+                <li><a href="Article.html">ARTICLE</a></li>
+            </ul>
+        </nav>
+
     </header>
 
     <!---------------------- 側邊欄 ------------------------->
     <section id="sidebox">
         <div class="sidebar">
-            <h2>Sidebar</h2>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+            <h2>Search</h2>
+            <input type="text" placeholder="搜尋攝影師...">
+
+            <div style="width: 100px; height: 25px;"></div>
+
+            <div class="filter-group">
+                <h2>Type</h2>
+                <label><input type="checkbox"> 婚禮攝影</label>
+                <label><input type="checkbox"> 時尚攝影</label>
+                <label><input type="checkbox"> 商業攝影</label>
+                <label><input type="checkbox"> 兒童攝影</label>
+            </div>
+
+            <div style="width: 100px; height: 25px;"></div>
+
+            <div class="filter-group">
+                <h2>Price</h2>
+                <input type="range" min="0" max="5000" step="100">
+                <p>最高價格：<span id="price-range">2500</span> 元</p>
+            </div>
+
+            <div style="width: 100px; height: 25px;"></div>
+
+            <div class="filter-group">
+                <h2>Location</h2>
+                <select>
+                    <option>全台</option>
+                    <option>台北</option>
+                    <option>台中</option>
+                    <option>高雄</option>
+                </select>
+            </div>
         </div>
 
         <!---------------- 1. 文字介紹(S2)---------------------->
@@ -289,7 +361,7 @@
     </section>
 
     <!-- 引入 Bootstrap JS (放在 body 結束前) -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
